force-app/main/default/objects/Employee_Assignment__c/Employee_Assignment__c.object-meta.xml
<CustomObject>
    <label>Employee Assignment</label>
    <nameField>
        <displayFormat>EM-{0000}</displayFormat>
        <label>Employee Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>