force-app/main/default/objects/Employee_Assignment__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Allocation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>