force-app/main/default/objects/Employee_Assignment__c/fields/Assignment_Role__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Role__c</fullName>
    <label>Assignment Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Lead</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>QA Engineer</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>