force-app/main/default/objects/Employee_Assignment__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Assignments (Employee)</relationshipLabel>
    <relationshipName>Employee_Assignments1</relationshipName>
    <type>Lookup</type>
</CustomField>