force-app/main/default/objects/Employee_Assignment__c/fields/Employee_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Employee_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Assignment</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Assignments</relationshipLabel>
    <relationshipName>Employee_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>