force-app/main/default/objects/Employee_Assignment__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Assignments (Manager)</relationshipLabel>
    <relationshipName>Employee_Assignments3</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>