force-app/main/default/objects/Employee_Assignment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
    AND(
        TODAY() &gt;= Start_Date__c,
        TODAY() &lt;= End_Date__c
    ),
    &quot;Active&quot;,
    &quot;Inactive&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>