force-app/main/default/objects/Employee_Assignment__c/validationRules/Assignment_Requires_Employee.validationRule-meta.xml
<ValidationRule>
    <fullName>Assignment_Requires_Employee</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Employee__c )</errorConditionFormula>
    <errorDisplayField>Employee__c</errorDisplayField>
    <errorMessage>Every assignment must be associated with an employee.</errorMessage>
</ValidationRule>