force-app/main/default/objects/Employee_Assignment__c/validationRules/Completed_Assignment_Requires_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Assignment_Requires_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Completed&quot;),
    ISBLANK(End_Date__c)
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Completed assignments must have an End Date.</errorMessage>
</ValidationRule>